# openneuro_scrub

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_uv.sh
scripts/: access_data.py  access_functions.py  check_files.py  check_metadata.sbatch  create_figures.py  download_data.py  evaluating_files-values.ipynb  exploratory_code-functions.ipynb  first_complete_run.py  get_runlist.py  partial_run.py  run_metacheck.py  summarize_information.ipynb
scripts/notebooks/: exploratory_code-functions.ipynb  summarize_information.ipynb
